# TensorRT

./: .bazelrc  .clang-format  .clang-tidy  .clangd  .coveragerc  .dockerignore  .git-blame-ignore-revs  .gitignore  .gitmodules  .nspect-allowlist.toml  .pre-commit-config.yaml  .style.yapf  BUILD  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Config.cmake.in  Dockerfile.notebook  INSTALLATION.md  LICENSE  MODULE.bazel  README.md  SSD_TRTorch.ipynb  TESTING_AND_CI_DESIGN.md  TensorRT-Edge-LLM  WORKSPACE  WORKSPACE.ci  bazel-workspace  changes.patch  dev_dep_versions.yml  dinov2.py  eagle.py  eagle2_patch.diff  eagle2_patch_gwen.diff  eagle2_trt_forward_benchmark.py  eagle2_trt_replace.py  eagle_language_tower.py  eagle_vision_tower.py  (+25 more)
core/: BUILD  CMakeLists.txt  README.md  compiler.cpp  compiler.h  version.h
core/conversion/: BUILD  CMakeLists.txt  InterfaceTypes.cpp  conversion.cpp  conversion.h  conversion_blacklist.cpp  conversion_ignorelist.cpp  string_to_type_lut.cpp
core/conversion/arg/: Arg.cpp  Arg.h  Arg_inl.h  BUILD
core/conversion/conversionctx/: BUILD  CMakeLists.txt  ConversionCtx.cpp  ConversionCtx.h
core/conversion/converters/: Arg.cpp  BUILD  CMakeLists.txt  NodeConverterRegistry.cpp  README.md  Weights.cpp  Weights.h  converter_util.cpp  converter_util.h  converters.h
core/conversion/evaluators/: BUILD  CMakeLists.txt  NodeEvaluatorRegistry.cpp  README.md  aten.cpp  eval_macros.h  eval_util.cpp  eval_util.h  evaluators.h  prim.cpp
core/conversion/tensorcontainer/: BUILD  CMakeLists.txt  TensorContainer.cpp  TensorContainer.h
core/conversion/var/: BUILD  CMakeLists.txt  Var.cpp  Var.h  Var_inl.h
core/execution/: BUILD  TRTEngine.cpp  TRTEngineManager.cpp  execution.h  register_trt_op.cpp
core/ir/: BUILD  CMakeLists.txt  GraphInputs.cpp  Input.cpp  InputRange.cpp  StaticParams.cpp  ir.cpp  ir.h
core/lowering/: BUILD  CMakeLists.txt  LowerInfo.cpp  drop_unused_nodes.cpp  lowering.cpp  lowering.h  register_const_op.cpp  register_trt_placeholder_ops.cpp
core/lowering/irfusers/: BUILD  expand_log_softmax.cpp  fuse_flatten_linear.cpp  irfusers.h  remove_dropout.cpp  unpack_batch_norm.cpp
core/lowering/passes/: BUILD  CMakeLists.txt  alias_op_mapping.cpp  conv1d_to_convolution.cpp  conv2d_to_convolution.cpp  conv3d_to_convolution.cpp  convNd_to_convolution.cpp  device_casting.cpp  element_wise_pass.cpp  exception_elimination.cpp  expand_log_softmax.cpp  fuse_addmm_branches.cpp  fuse_flatten_linear.cpp  linear_to_addmm.cpp  module_fallback.cpp  op_aliasing.cpp  passes.h  reduce_gelu.cpp  reduce_remainder.cpp  reduce_to.cpp  remove_bn_dim_check.cpp  remove_contiguous.cpp  remove_dropout.cpp  remove_inplace_add.cpp  remove_nops.cpp  remove_set_attrs.cpp  remove_to.cpp  remove_unnecessary_casts.cpp  replace_aten_pad.cpp  rewrite_inputs_with_params.cpp  silu_to_sigmoid_multiplication.cpp  tile_to_repeat.cpp  unpack_addmm.cpp  unpack_batch_norm.cpp  unpack_hardsigmoid.cpp  unpack_hardswish.cpp  unpack_log_softmax.cpp  unpack_new.cpp  unpack_rsqrt.cpp  unpack_scaled_dot_product_attention.cpp  (+3 more)
core/partitioning/: BUILD  CMakeLists.txt  PartitionInfo.cpp  PartitionInfo.h  README.md  SegmentedBlock.cpp  SegmentedBlock.h  partitioning.cpp  partitioning.h  shape_analysis.cpp  shape_analysis.h  stitching.cpp
core/partitioning/partitioningctx/: BUILD  CMakeLists.txt  PartitioningCtx.cpp  PartitioningCtx.h
core/partitioning/partitioninginfo/: BUILD  CMakeLists.txt  PartitioningInfo.cpp  PartitioningInfo.h
core/partitioning/segmentedblock/: BUILD  CMakeLists.txt  SegmentedBlock.cpp  SegmentedBlock.h
core/plugins/: BUILD  CMakeLists.txt  PluginRegistry.cpp  README.md  plugin_prelude.h  plugins.h  register_plugins.cpp
core/plugins/impl/: interpolate_plugin.cpp  interpolate_plugin.h  normalize_plugin.cpp  normalize_plugin.h  scatter_add_plugin.cpp  scatter_add_plugin.h
core/quantization/: TRTEntropyCalibrator.cpp  quantization.h
core/runtime/: BUILD  CMakeLists.txt  CUDADevice.cpp  CUDADevice.h  CudaDevice.cpp  DeviceList.cpp  Platform.cpp  Platform.h  RTDevice.cpp  RTDevice.h  RuntimeSettings.cpp  RuntimeSettings.h  StreamGuard.h  TRTEngine.cpp  TRTEngine.h  TRTEngineProfiler.cpp  TRTEngineProfiler.h  TRTRuntimeConfig.cpp  TRTRuntimeConfig.h  TensorRTBackend.h  TensorRTBindingNames.h  execute_engine.cpp  register_jit_hooks.cpp  register_stable_hooks.cpp  register_trt_op.cpp  runtime.cpp  runtime.h  runtime_utils.cpp  stream_ops.cpp
core/runtime/executorch/: BUILD  CMakeLists.txt  ETRTEngine.cpp  ETRTEngine.h  TensorRTBackend.cpp  TensorRTBackend.h  (+1 more)
core/util/: BUILD  CMakeLists.txt  Exception.cpp  Exception.h  build_info.h  converter_util.cpp  converter_util.h  core_util.cpp  core_util.h  file_lock.cpp  file_lock.h  jit_util.cpp  jit_util.h  macros.h  prelude.h  trt_util.cpp  trt_util.h
cpp/: BUILD  CMakeLists.txt  README.md
cpp/api/: BUILD  README.md
cpp/benchmark/: BUILD  README.md  main.cpp
cpp/lib/: BUILD
cpp/ptq/: BUILD  README.md  main.cpp
cpp/src/: compile_spec.cpp  logging.cpp  ptq.cpp  torch_tensorrt.cpp  trtorch.cpp  types.cpp
cpp/supportedops/: BUILD  main.cpp
cpp/trtorchc/: BUILD  README.md  main.cpp
cpp/trtorchexec/: BUILD  README.md  main.cpp
examples/executorch_reference_runner/: BUILD  CMakeLists.txt  README.md  load_model.py  main.cpp
examples/torchtrt_aoti_example/: BUILD  CMakeLists.txt  Makefile  README.md  inference.cpp  inference.py  model.py
examples/torchtrt_executorch_example/: BUILD  CMakeLists.txt  executor_runner.cpp  export_dynamic_shape.py  export_static_shape.py  load_dynamic_shape.py  load_static_shape.py  model_static_shape.py
examples/torchtrt_runtime_example/: BUILD  CMakeLists.txt  Makefile  README.md  main.cpp  network.py
libtorchtrt_executorch/: CMakeLists.txt  README.md
py/torch_tensorrt/: CMakeLists.txt  README.md  _C.cp310-win_amd64.pyd  _Device.py  _Input.py  _TRTModule.py  _TRTModuleNext.py  _TensorRTProxyModule.py  __init__.py  _compile.py  _enums.py  _features.py  _util.py  _utils.py  _version.py  logging.py  ptq.py  trt_alias.py
(+6410 files in other folders)
